src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <inlineHelpText>Only populated if the Dealer is &quot;Cancelled&quot;.</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Dealer_Code__c</fullName>
        <label>Corporate Dealer Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <description>This is the Dealer&apos;s code</description>
        <externalId>true</externalId>
        <label>Dealer Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealer_Language__c</fullName>
        <description>The dealership has staff who can provide service to customers with these languages</description>
        <label>Dealer Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Look_up_Postal_Code__c</fullName>
        <formula>TRIM(LEFT(BillingPostalCode, 3)) &amp; TRIM(RIGHT(BillingPostalCode, 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Look-up Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Operating_Name__c</fullName>
        <externalId>true</externalId>
        <label>Dealer Legal Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Product_Line__c</fullName>
        <label>Dealer Product Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <description>Dealer Status</description>
        <label>Dealer Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Zone__c</fullName>
        <label>Dealer Zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectEndDate__c</fullName>
        <label>EffectEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HH_Id__c</fullName>
        <externalId>true</externalId>
        <label>HH Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PartyGroupingDescription__c</fullName>
        <label>PartyGroupingDescription</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyGroupingName__c</fullName>
        <label>PartyGroupingName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyGroupingValue__c</fullName>
        <label>PartyGroupingValue</label>
        <picklist>
            <picklistValues>
                <fullName>Original HouseHold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HouseHold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OrgGrp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Power_House_Dealer__c</fullName>
        <label>Power House Dealer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Dealer_Code__c</fullName>
        <description>Dealer codes change from time to time. Business only tracks the previous one and the current one (not historical)</description>
        <label>Previous Dealer Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Primary Email Address</description>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_Dealer_Code__c</fullName>
        <label>Principal Dealer Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regionalized_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regionalized Grouping</label>
        <referenceTo>Regionalized_Grouping__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All_Active_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Dealer_Code__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Dealer_Product_Line__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>Dealer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer_Account</value>
        </filters>
        <filters>
            <field>Dealer_Status__c</field>
            <operation>notEqual</operation>
            <value>C</value>
        </filters>
        <label>All Active Dealers</label>
        <sharedTo>
            <group>Acura_Concierge_All</group>
            <group>Auto_Tech_Line_All</group>
            <group>CCG_All</group>
            <group>CRM_All</group>
            <group>Credit_All</group>
            <group>Customer_Accounting_All</group>
            <group>Customer_Relations_All</group>
            <group>DCD_Parts_All</group>
            <group>Dealer_Financial_Services_All</group>
            <group>Funding_All</group>
            <group>Legal_All</group>
            <group>MCPE_All</group>
            <group>Quality_Engineering_All</group>
            <group>System_Administrator</group>
            <group>Warranty_Plus_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Dealer_Code__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Dealer_Product_Line__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>Dealer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer_Account</value>
        </filters>
        <label>All Dealers</label>
        <sharedTo>
            <group>Acura_Concierge_All</group>
            <group>Auto_Tech_Line_All</group>
            <group>CCG_All</group>
            <group>CRM_All</group>
            <group>Credit_All</group>
            <group>Customer_Accounting_All</group>
            <group>Customer_Relations_All</group>
            <group>DCD_Parts_All</group>
            <group>Dealer_Financial_Services_All</group>
            <group>Funding_All</group>
            <group>Legal_All</group>
            <group>MCPE_All</group>
            <group>Quality_Engineering_All</group>
            <group>System_Administrator</group>
            <group>Warranty_Plus_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Households</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Dealer_Code__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Dealer_Product_Line__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>Dealer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Households</label>
    </listViews>
    <recordTypes>
        <fullName>Dealer_Account</fullName>
        <active>true</active>
        <description>Dealer Information</description>
        <label>Dealer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>A group of individuals related by a common address</description>
        <label>Household</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>